--- a/angular.json
+++ b/angular.json
@@ -94,5 +94,17 @@
         }
       }
     }
-  }
+  },
+  "cli": {
+    "analytics": false
+  },
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "src/styles.css"
+  ],
+  "scripts": [
+    "node_modules/jquery/dist/jquery.min.js",
+    "node_modules/bootstrap/dist/js/bootstrap.min.js"
+  ]
+  
 }
